--- a/plugins/flexicontent_fields/toolbar/toolbar/toolbar.css
+++ b/plugins/flexicontent_fields/toolbar/toolbar/toolbar.css
@@ -75,32 +75,25 @@
 	padding-left: 26px;
 }
 
-/* Share */
+/* Social share container and addthis */
 .flexi-socials {
 	padding-top: 9px;
 }
-/* Share */
 .flexi-socials-outside {
-	/*clear: both; Commented by Enjoyman*/
+	/*clear: both;*/
 	padding-top: 9px;
 	display:block;
-	
-	/* Added by Enjoyman */
 	float:left;
 	margin-left:0;
 	margin-right:0;
 	padding-left:0;
 	padding-right:0;
-	width:140px;
 }
-/* Added by Enjoyman */
-.addthis_toolbox{
+.addthis_toolbox {
 	margin:0;
 	padding:0;
-	width:140px;
+	font-size: 12px;
 }
-
-.addthis_toolbox {font-size: 12px;}
 .addthis_toolbox a {font-size: 12px; text-decoration: none; color: #00568F;}
 .addthis_toolbox .addthis_button_compact {line-height: 18px;}
 #at16pf a {display: none;}
