--- a/site/assets/css/flexicontent.css
+++ b/site/assets/css/flexicontent.css
@@ -75,12 +75,12 @@
 #flexicontent .buttons > a > img {
 	border: none !important;
 	vertical-align:top !important;
-	margin:2px 6px 0px 0px !important;
+	margin:1px 6px 0px 0px !important;
 }
 #flexicontent .fc_editbutton > img {
 	margin-top: 0px !important;
 }
-#flexicontent .fc_editbutton,
+#flexicontent .fc_editbutton:not(.btn),
 #flexicontent .buttons > a:not(.btn) {
 	height: 1.4em;
 	line-height: 1.4em;
@@ -556,6 +556,10 @@ form > .fc_filter_line {  /* filters placed directly inside form aka outside the
 	text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
 }
 
+.fc_filter.fc_filter_text_search .fc_filter_label,
+.fc_filter_line.fc_filter_text_search .fc_filter_label {
+	margin-top: 4px;
+}
 .fc_filter .fc_filter_label {
 	clear: both;
 	width: auto !important;
